# pythonProjects

./: readme.md
CHAT_BOT/phase2/: chatbot.py  fun.py  pyproject.toml
COMPARING_IF_TWO_PDF_ARE_SAME/: comparingManyPages.py  seq.py  setsKnowledge.py  singlePageComp.py
NUMBER_GUESSING_GAME/: guess_game.py
WORD_GUESSING_GAME/: letter_guessing.py  num_guessing.py  readme.md  userlogin.py
modules used in these projects/: diffLib.py
